Fix PDF presentation

--- a/_harp/about-me.ejs
+++ b/_harp/about-me.ejs
@@ -71,10 +71,10 @@
             <p class="text-muted">(italian language, slides in english)</p>
         </div>
         <div class="col-md-4 col embed-responsive embed-responsive-16by9 mr-1">
-            <iframe class="embed-responsive-item " src="//www.youtube.com/embed/JUI47ubxmuA" frameborder="0" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="//www.youtube.com/embed/JUI47ubxmuA" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-md-3 embed-responsive embed-responsive-4by3">
-            <iframe src="//www.slideshare.net/slideshow/embed_code/key/3lhXcVwHYdXCw" frameborder="0"allowfullscreen></iframe>
+            <iframe src="//www.slideshare.net/slideshow/embed_code/key/3lhXcVwHYdXCw" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     
@@ -82,12 +82,16 @@
 
     <div class="media">
         <div class="col-md-5 embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item " src="//mailga.fedorapeople.org/FAD Milan 2012/slides (PDF)/Fedora for home and work.pdf" frameborder="0" allowfullscreen></iframe>
+            <object data="https://mailga.fedorapeople.org/FAD Milan 2012/slides (PDF)/Fedora for home and work.pdf" type="application/pdf"></object>
         </div>
         <div class="col media-body ml-2">
             <h3>Fedora: for home and work</h3>
             <p>How Fedora can be used for both home and work: from virtualization to custom spins.
-                Using Linux every day is possible... and funny.</p>
+                Using Linux every day is possible... and funny.
+            </p>
+            <p>
+                From <a href="https://fedoraproject.org/wiki/FAD_LinuxDayMi_2012" target="_blank">FAD LinuxDayMi</a>.
+            </p>
             <p class="text-muted">(italian language)</p>
         </div>
     </div>
