--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -7,7 +7,7 @@
 
 <div class="container py-1">
     <div class="row justify-content-center">
-        <div class="col-md-5">
+        <div class="col-md-5 col-sm-6 col-12">
             <div class="card h-100">
                 <img class="card-img-top" src="img/fedora-kde-workstation.jpg" alt="Fedora remix image">
                 <div class="card-body">
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 col-sm-6 col-12">
             <div class="card mb-4 h-100">
                 <img class="card-img-top" src="img/centos-gnome-workstation.jpg" alt="CentOS remix image">
                 <div class="card-body">
